# memory

./: CMakeLists.txt  Makefile  readme.md
base/effects/: background.psd  title_logo.psd
base/logo/: logo.psd
doc/: bme-vik-mi.css  game.html  index.html  problems.html  source.html  summa.html
doc/1NHF/src/: Animation.html  Engine.h.html  Engine.html  Events.h.html  Events.html  Init.h.html  Init.html  Platform.h.html  Platform.html  Renderer.html  main.html
src/: Animation.c  Engine.c  Engine.h  Events.c  Events.h  Init.c  Init.h  Platform.c  Platform.h  Renderer.c  main.c
